@@ -4,6 +4,8 @@ Changelog
 0.2 - Unreleased
 ----------------
 
+* Geographical coverage values are fetched from http://rod.eionet.europa.eu/countries [vincisas]
+* Schema updated to `SOER RDF spec <https://svn.eionet.europa.eu/projects/Zope/wiki/SOERFeedSpec>`_ [vincisas]
 
 0.1 - 2010-01-15
 ----------------
